<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".PronounceAWordActivity">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/fileContentTxt"
                        android:layout_marginTop="14dp"
                        android:id="@+id/textView" />


                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/selectFileTxt"
                            android:id="@+id/selectFileBtn"
                            android:layout_below="@+id/textView"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/selectedFile"
                            android:layout_alignTop="@+id/selectFileBtn"
                            android:layout_toRightOf="@+id/selectFileBtn"
                            />

                    <Button
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/talkNextBtnTxt"
                        android:id="@+id/talkNextBtn"
                        android:layout_below="@+id/selectFileBtn"/>
                      <Button
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/talkRandomTxt"
                        android:id="@+id/talkRandomBtn"
                        android:layout_below="@+id/talkNextBtn" />

                    <Button
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/talkRepeatTxt"
                        android:id="@+id/talkRepeatBtn"
                        android:layout_below="@+id/talkRandomBtn"/>
                    <TextView
                        android:id="@+id/status"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:typeface="serif"
                        android:layout_below="@+id/talkRepeatBtn" />


                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:hint="@string/enterYourWord"
                    android:id="@+id/typedWord"
                    android:layout_below="@+id/status"/>

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/verifyBtn"
                    android:text="@string/verify"
                    android:layout_below="@+id/typedWord" />

                 <TextView
                    android:id="@+id/yourWordTxt"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                      android:textSize="40dp"
                    android:textStyle="bold"
                    android:typeface="serif"
                    android:textColor="#0000CD"
                      android:layout_below="@+id/verifyBtn"
                      android:layout_alignParentBottom="true" />



</RelativeLayout>
